(no-issue) bookmark text overflow ellipsis 적용

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,7 +29,7 @@
     margin: 1% auto;
     width: 800px;
     height: 80px;
-    text-align: center;
+    text-align: left;
     border-radius: 13.5px;
     box-shadow: 0 0 0.5px 0 rgba(23, 26, 31, 0.07), 0 0 1px 0 rgba(23, 26, 31, 0.12);
     border: solid 0.5px #e5e5e5;
